[gd_scene load_steps=5 format=2]

[ext_resource path="res://Scripts/TitleScreen.gd" type="Script" id=1]
[ext_resource path="res://Sprites/Start Button.png" type="Texture" id=2]
[ext_resource path="res://Sprites/Credits Button.png" type="Texture" id=3]
[ext_resource path="res://Sprites/Quit Button.png" type="Texture" id=4]

[node name="TitleScreen" type="Node2D"]
script = ExtResource( 1 )

[node name="Play" type="Button" parent="."]
margin_left = 384.0
margin_top = 239.0
margin_right = 606.0
margin_bottom = 315.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
icon = ExtResource( 2 )
flat = true

[node name="Credits" type="Button" parent="."]
margin_left = 383.625
margin_top = 346.895
margin_right = 605.625
margin_bottom = 422.895
icon = ExtResource( 3 )

[node name="Quit" type="Button" parent="."]
margin_left = 384.986
margin_top = 461.167
margin_right = 606.986
margin_bottom = 537.167
icon = ExtResource( 4 )

[connection signal="button_up" from="Play" to="." method="_on_Play_button_up"]
[connection signal="button_up" from="Credits" to="." method="_on_Credits_button_up"]
[connection signal="button_up" from="Quit" to="." method="_on_Quit_button_up"]
